<resources>
    <string name="app_name" translatable="false">MpvRemote</string>
    <string name="relay_url_label">Relay base URL</string>
    <string name="relay_url_hint" translatable="false">http://10.0.2.2:8765</string>
    <string name="socket_path_label">MPV socket path</string>
    <string name="socket_path_hint" translatable="false">/tmp/mpv.socket</string>
    <string name="append_checkbox_label">Append to playlist (--append)</string>
    <string name="save_settings">Save</string>
    <string name="controls_section_label">Controls</string>
    <string name="control_clear">Clear playlist</string>
    <string name="send_clipboard">Send clipboard</string>
    <string name="clipboard_empty">Clipboard is empty</string>
    <string name="clipboard_no_url">No URL found in clipboard</string>
    <string name="intent_filter_youtube">YouTube</string>
    <string name="intent_filter_youtube_short">YouTube</string>
    <string name="intent_filter_twitch">Twitch</string>
    <string name="open_link_settings">Open link settings</string>
    <string name="open_link_settings_error">Could not open link settings</string>
    <string name="control_stop_desc">Stop playback</string>
    <string name="control_mute_desc">Mute</string>
    <string name="mute_enabled">Mute enabled</string>
    <string name="mute_disabled">Mute disabled</string>
    <string name="control_previous_desc">Previous track</string>
    <string name="control_play_pause_desc">Play / Pause</string>
    <string name="control_next_desc">Next track</string>
    <string name="settings_saved">Settings saved</string>
    <string name="nav_remote">Remote</string>
    <string name="nav_settings">Settings</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="success_sent">Sent: %1$s</string>
    <string name="success_control">%1$s command sent</string>
    <string name="playback_progress_desc">Playback progress</string>
    <string name="playback_time_unknown">--:--</string>
    <string name="playback_time_format">%1$s / %2$s</string>
    <string name="playlist_section_label">Playlist</string>
    <string name="playlist_empty">Playlist empty</string>
    <string name="playlist_remove">Remove from playlist</string>
    <string name="playlist_removed">Removed from playlist</string>
    <string name="error_playlist">Error loading playlist: %1$s</string>
    <string name="error_send">Error: %1$s</string>
    <string name="error_no_url">No URL received</string>
    <string name="error_empty_relay">Relay URL is empty</string>
</resources>
